Final steps for PyPi publishing

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,25 @@
 [metadata]
-description-file = README.md
+name = wxconfig
+version = v0.1
+author = Jamie Cash
+author_email = jlcash@gmail.com
+description = A package for managing application config through yaml files. Provides dynamically generated wxpython dialog.
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/jamiecash/wxconfig
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    Topic :: Software Development :: Build Tools
+    License :: OSI Approved :: MIT License
+    Operating System :: OS Independent
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+[options]
+packages = find:
+python_requires = >=3.6
+
+[options.packages.find]
+where = src
