--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,3 @@
 [build-system]
-requires = [
-    "wxpython>=4.1.1",
-    "pyyaml>=5.4.1"
-]
+requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
