--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,14 @@
 [metadata]
 name = wxconfig
-version = v1.2
+version = v1.3
 author = Jamie Cash
 author_email = jlcash@gmail.com
 description = A package for managing application config through yaml files. Provides dynamically generated wxpython dialog.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/jamiecash/wxconfig
+project_urls =
+    Issue Tracker = https://github.com/jamiecash/wxconfig/issues
 classifiers =
     Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
