--- a/test/testconfigmeta.yaml
+++ b/test/testconfigmeta.yaml
@@ -1,13 +1,19 @@
 ---
 test1:
   test1_1:
+    __label: Test 1.1
+    __helptext: Test 1.1 Branch
     val1_1_1:
       __label: val 1.1.1
-      __helptext: Value 1.1.1
+      __helptext: Value 1.1.1 Leaf
     val1_1_2:
       __label: val 1.1.2
-      __helptext: Value 1.1.2
+      __helptext: Value 1.1.2 Leaf
     val1_1_3:
       __label: val 1.1.3
-      __helptext: Value 1.1.3
+      __helptext: Value 1.1.3 Leaf
+  test1_2:
+    val1_2_1:
+      __label: val 1.1.1
+      __helptext: Value 1.1.1 Leaf
 ...
