Layout now inline with python.org tutorial.

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,3 +22,8 @@ classifiers =
 [options]
 packages = find:
 python_requires = >=3.6
+package_dir =
+    = src
+
+[options.packages.find]
+where = src
