--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = wxconfig
-version = v1.4
+version = v1.5
 author = Jamie Cash
 author_email = jlcash@gmail.com
 description = A package for managing application config through yaml files. Provides dynamically generated wxpython dialog.
@@ -24,6 +24,9 @@ packages = find:
 python_requires = >=3.6
 package_dir =
     = src
+install_requires =
+    wxpython==4.1.1
+    pyyaml==5.4.1
 
 [options.packages.find]
 where = src
